MCU/.metadata/.plugins/org.eclipse.cdt.ui/PracticaParcial1.0.build.log
01:48:46 **** Incremental Build of configuration Debug for project PracticaParcial1.0 ****
make -r -j16 all 
Building file: ../src/PracticaParcial1.0.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M3 -D__USE_CMSIS=CMSISv2p00_LPC17xx -D__LPC17XX__ -D__REDLIB__ -I"C:\nxp\CMSISv2p00_LPC17xx\inc" -O0 -fno-common -g3 -gdwarf-4 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -fmerge-constants -fmacro-prefix-map="../src/"= -mcpu=cortex-m3 -mthumb -fstack-usage -specs=redlib.specs -MMD -MP -MF"src/PracticaParcial1.0.d" -MT"src/PracticaParcial1.0.o" -MT"src/PracticaParcial1.0.d" -o "src/PracticaParcial1.0.o" "../src/PracticaParcial1.0.c"
../src/PracticaParcial1.0.c: In function 'config_EINT':
../src/PracticaParcial1.0.c:49:5: error: 'NVIC_IP' undeclared (first use in this function); did you mean 'NVIC'?
   49 |     NVIC_IP[21] = (uint8_t) (p<<3);
      |     ^~~~~~~
      |     NVIC
../src/PracticaParcial1.0.c:49:5: note: each undeclared identifier is reported only once for each function it appears in
../src/PracticaParcial1.0.c:49:30: error: 'p' undeclared (first use in this function)
   49 |     NVIC_IP[21] = (uint8_t) (p<<3);
      |                              ^
make[1]: *** [src/subdir.mk:26: src/PracticaParcial1.0.o] Error 1
make: *** [makefile:35: all] Error 2
"make -r -j16 all" terminated with exit code 2. Build might be incomplete.

01:48:46 Build Failed. 4 errors, 0 warnings. (took 136ms)

